@@ -26,3 +26,7 @@ Linkpoint Gateway
 eWay Gateway
 
 * Originally contributed by Lucas Carlson  (mailto:lucas@rufy.com)
+
+CardStream Gateway
+
+* Portions of the Cardstream gateway by Jonah Fox and Thomas Nichols
