@@ -6,7 +6,7 @@ class ProtxTest < Test::Unit::TestCase
       :login => 'X'
     )
 
-    @creditcard = credit_card('4242424242424242')
+    @creditcard = credit_card('4242424242424242', :type => 'visa')
   end
 
   def test_purchase_success    
@@ -50,6 +50,45 @@ class ProtxTest < Test::Unit::TestCase
   
   def test_capture_url
     assert_equal 'https://ukvpstest.protx.com/vspgateway/service/release.vsp', @gateway.send(:build_endpoint_url, :capture)
+  end
+  
+  def test_electron_cards
+    # Visa range
+    assert_no_match ProtxGateway::ELECTRON, '4245180000000000'
+    
+    # First electron range
+    assert_match ProtxGateway::ELECTRON, '4245190000000000'
+                                                                
+    # Second range                                              
+    assert_match ProtxGateway::ELECTRON, '4249620000000000'
+    assert_match ProtxGateway::ELECTRON, '4249630000000000'
+                                                                
+    # Third                                                     
+    assert_match ProtxGateway::ELECTRON, '4508750000000000'
+                                                                
+    # Fourth                                                    
+    assert_match ProtxGateway::ELECTRON, '4844060000000000'
+    assert_match ProtxGateway::ELECTRON, '4844080000000000'
+                                                                
+    # Fifth                                                     
+    assert_match ProtxGateway::ELECTRON, '4844110000000000'
+    assert_match ProtxGateway::ELECTRON, '4844550000000000'
+                                                                
+    # Sixth                                                     
+    assert_match ProtxGateway::ELECTRON, '4917300000000000'
+    assert_match ProtxGateway::ELECTRON, '4917590000000000'
+                                                                
+    # Seventh                                                   
+    assert_match ProtxGateway::ELECTRON, '4918800000000000'
+    
+    # Visa
+    assert_no_match ProtxGateway::ELECTRON, '4918810000000000'
+    
+    # 19 PAN length
+    assert_match ProtxGateway::ELECTRON, '4249620000000000000'
+    
+    # 20 PAN length
+    assert_no_match ProtxGateway::ELECTRON, '42496200000000000'
   end
 
   private
